packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/Customer_Profile__c.object-meta.xml
<CustomObject>
    <label>Customer Profile</label>
    <nameField>
        <label>Customer Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>