packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Account_Strategy__c</fullName>
    <label>Account Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>