packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Average_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_to_Close__c</fullName>
    <label>Average Days to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>