packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <type>TextArea</type>
</CustomField>