packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Employee_Size__c.field-meta.xml
<CustomField>
    <fullName>Employee_Size__c</fullName>
    <label>Employee Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>