packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Frequently_Purchased_Products__c.field-meta.xml
<CustomField>
    <fullName>Frequently_Purchased_Products__c</fullName>
    <label>Frequently Purchased Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>