packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Geographic_Regions__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Regions__c</fullName>
    <label>Geographic Regions</label>
    <type>TextArea</type>
</CustomField>