packages/ennube-salesforce/force-app/main/default/objects/Customer_Profile__c/fields/Industries__c.field-meta.xml
<CustomField>
    <fullName>Industries__c</fullName>
    <label>Industries</label>
    <type>TextArea</type>
</CustomField>